fix: divice theme and slider overflow

--- a/jetty-box/src/index.css
+++ b/jetty-box/src/index.css
@@ -5,12 +5,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #2e2e2e;
 
@@ -30,6 +35,9 @@ a:hover {
 }
 
 body {
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #2e2e2e;
+
   /* margin: 0; */
   /* display: flex; */
   /* place-items: center; */
@@ -105,7 +113,6 @@ button:hover {
   font-size: 29px;
   line-height: 32px;
   text-transform: uppercase;
-
   background: linear-gradient(90.37deg, #d69b56 2.34%, #fddfbc 99.98%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
